# x402-agent-monetizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: agent_client.py  fastapi_agent.py
src/x402_agent_monetizer/: __init__.py  client.py  paywall.py  verifier.py
tests/: test_smoke.py
