[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x402-agent-monetizer"
version = "0.1.0"
description = "FastAPI middleware for monetizing AI agent endpoints with x402 (USDC on Base, Polygon, Arbitrum, Solana)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "minhthai1995" }]
keywords = ["x402", "base", "coinbase", "usdc", "fastapi", "agent", "ai-agent", "payments", "stablecoin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "x402>=2.10.0",
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/minhthai1995/x402-agent-monetizer"
Issues = "https://github.com/minhthai1995/x402-agent-monetizer/issues"
"x402 Protocol" = "https://www.x402.org/"
"Base Ecosystem" = "https://base.org/"

[tool.hatch.build.targets.wheel]
packages = ["src/x402_agent_monetizer"]

[tool.ruff]
line-length = 100
target-version = "py310"
